2013-10-09  Nick Clifton  <nickc@redhat.com>

	* dwarf.c (add64): New function.
	(read_and_display_attr_value): Add CU offset in to the value
	displayed for a DW_AT_ref8 attribute.

2013-09-20  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2013-09-18  Tristan Gingold  <gingold@adacore.com>

	* NEWS: Add marker for 2.24.

2013-09-18  Tristan Gingold  <gingold@adacore.com>

	* Makefile.am (LEXLIB): Define.  Replase references to @LEXLIB@
	by $(LEXLIB).
	* Makefile.in: Regenerate.

2013-09-17  Doug Gilmore  <Doug.Gilmore@imgtec.com>

	* readelf.c (get_machine_flags): Handle EF_MIPS_FP64.

2013-09-12  Nick Clifton  <nickc@redhat.com>

	* dwarf.c (dwarf_vmatoa): Rename to dwarf_vmatoa_1 and add a
	precision parameter.
	(dwarf_vmatoa): New wrapper for dwarf_vmatoa_1.
	(print_dwarf_vma): Use dwarf_vmatoa_1.
	(SAFE_BYTE_GET): Add check that VAL is big enough to contain
	AMOUNT bytes.
	(process_debug_info): Use an unsigned int for the offset size.
	(process_debug_pubnames): Likewise.
	(display_debug_aranges): Likewise.
	(struct Frame_Chunk): Use dwarf_vma type for pc_begin and pc_range
	fields.
	(frame_display_row): Use print_dwarf_vma to display dwarf_vma
	values.
	(display_debug_frames): Likewise.

2013-09-10  Nick Clifton  <nickc@redhat.com>

	* dwarf.c (display_debug_frames): Check for DW64_CIE_ID when
	parsing 64-bit frames.

2013-08-27  Nick Clifton  <nickc@redhat.com>

	PR binutils/15796
	* ar.c (map_over_members): Correctly handle multiple same-name
	entries on the command line and in the archive.

2013-08-23  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/binutils.texi: Remove the extra space.

2013-08-23  Mikael Pettersson  <mikpe@it.uu.se>

	PR binutils/15779
	* doc/binutils.texi (ranlib -D): Correct description.
	PR binutils/15777
	(nm --special-syms): Fix typo.

2013-08-23  Nick Clifton  <nickc@redhat.com>

	PR binutils/15798
	* doc/binutils.texi (ar cmdline): Update description of 'q'
	command.

	PR binutils/14136